 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.6 Changelog

6.6.0 Beta 3
============

* [cdunde/DanielPharos]: Updated to better display the Model Editor's Skeleton group and
          - individual bones and their sub-bones when they are hidden.

* [cdunde/DanielPharos]: Model Editor - massive improvements in many areas including bones,
          - functions, specific setting capabilities and importers including single and
          - multiple md5anim file loading, manipulation and successive animation viewing.

* [DanielPharos]: Added a horizontal scrollbar in the treeview.

* [cdunde]: Model Editor - Setup QuArK Specific page modules for easy use with importers.

* [cdunde/DanielPharos]: Model Editor - Added bone handle scaling functions and selection option.

* [cdunde/DanielPharos]: Added full Vertex Weights support with its own dialog display
          - with either manual or auto updating and saving for each model component.

* [cdunde/DanielPharos]: Added full Vertex U,V Coloring support to the bones Specifics page.

* [cdunde/DanielPharos]: Completely rebuilt the Model Editor's bones system to coincide more
          - more with games and other model editor systems.

* [DanielPharos]: Fix a major slowdown in the progressbar drawing routine.

* [DanielPharos]: Fixed the treeview color boxes for components not showing up the first time.

* [cdunde/DanielPharos]: Added vertex color support.

* [DanielPharos]: Fix some problems with the FAKK2 and EF2 compilers producing bad BSP filenames.

* [cdunde/DanielPharos]: Added asi model format importing plugin.

* [DanielPharos]: Updated to DevIL 1.7.8, added IWI loading, and added many new image
          - loading/saving options.
